istio/monitoring/virtual_service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: default
spec:
  gateways:
    - default/gateway # namespace/gateway
  hosts:
    - argocd.nemo.kaonmir.xyz
  http:
    - route:
        - destination:
            host: "argocd-server.argocd.svc.cluster.local"
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: default
spec:
  gateways:
    - default/gateway # namespace/gateway
  hosts:
    - kiali.nemo.kaonmir.xyz
  http:
    - route:
        - destination:
            host: kiali.istio-system.svc.cluster.local
            port:
              number: 20001
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: default
spec:
  gateways:
    - default/gateway # namespace/gateway
  hosts:
    - grafana.nemo.kaonmir.xyz
  http:
    - route:
        - destination:
            host: grafana.istio-system.svc.cluster.local
            port:
              number: 80
